--- a/public/css/header.css
+++ b/public/css/header.css
@@ -23,3 +23,11 @@ html {
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.router-link-active {
+  text-decoration: none !important;
+}
+
+a {
+  text-decoration: none !important;
+}
