Vartotojų koregavimas, trinimas per modals.

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -16,7 +16,8 @@
 }
 
 .modal-container {
-    width: 500px;
+    max-width: 500px;
+    width:auto;
     margin: 0px auto;
     padding: 10px 20px;
     background-color: #fff;
